# llm-router

./: .env.example  Cargo.toml  README.md  justfile
docs/superpowers/plans/: 2026-04-06-access-log.md  2026-04-06-llm-proxy-mvp.md  2026-04-06-llm-proxy-phase-2.md  2026-04-06-llm-proxy-phase-3.md
docs/superpowers/specs/: 2026-04-06-access-log-design.md  2026-04-06-glm-qwen-compat-design.md  2026-04-06-llm-proxy-phase-2-design.md  2026-04-06-llm-proxy-phase-3-design.md  2026-04-06-openrouter-style-llm-proxy-design.md
examples/: model-config.json  proxy-keys.json
src/: access_log.rs  admin.rs  app_state.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  outbound_audit.rs  pricing.rs  quota.rs  router.rs  sse.rs  usage.rs  usage_aggregate.rs
src/api/: chat_completions.rs  mod.rs  models.rs  responses.rs  types.rs
src/domain/: request.rs  response.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  streaming.rs
tests/: access_logging_api.rs  admin_api.rs  auth_api.rs  chat_api.rs  logging_api.rs  models_api.rs  responses_api.rs
tests/common/: mod.rs
